--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
         <h1>Croquetas de atún</h1>
 
         <div>
-            <img  style="width: 600px; height: 300px;"  src="C:\Users\CC10\Documents\ExamenU1\img\croquetas_de_atun.jpg" alt="Croquetas de atún">
+            <img  style="width: 600px; height: 300px;"  src="C:\Users\CC10\Documents\ExamenU1\croquetas_de_atun.jpg" alt="Croquetas de atún">
         </div>
         
     </header>               
